博客更新；添加loading特效；

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1129,3 +1129,10 @@ static_prefix:
   twikoo: https://lib.baomitu.com/twikoo/1.4.17/
 
   hint: https://lib.baomitu.com/hint.css/2.7.0/
+
+
+# 加载动画
+loading:
+  enable: true
+  # 动画时长，从动画开始播放计算，不包含页面加载时间，单位ms
+  play_time: 500
