修复iconfont图标引入冲突问题；

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -241,7 +241,7 @@ custom_js:
 # The usage is the same as custom_js
 custom_css:
   - /css/macpanel
-  - //at.alicdn.com/t/c/font_4241027_kx7ma21v2i8.css
+  - //at.alicdn.com/t/c/font_4276126_g9ka2djyc2p.css
 
 # 网页访问统计
 # Analysis of website visitors
@@ -554,8 +554,7 @@ index:
   # If the posts are sorted by `sticky`, an icon is displayed in front of the post title
   post_sticky:
     enable: true
-    icon: "iconfont icon-TOP"
-    # icon: "iconfont icon-top"
+    icon: "iconfont icon-top"
 
 
 #---------------------------
