--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -18,11 +18,11 @@
 
 # 用于浏览器标签的图标
 # Icon for browser tab
-favicon: https://static.kevinchu.top/blog/assets/img/avatar_03.jpg
+favicon: https://static.kevinchu.top/blog/assets/img/favicon.jpg
 
 # 用于苹果设备的图标
 # Icon for Apple touch
-apple_touch_icon: https://static.kevinchu.top/blog/assets/img/avatar_03.jpg
+apple_touch_icon: https://static.kevinchu.top/blog/assets/img/favicon.jpg
 
 # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 # Title separator in browser tab, eg: article - site
@@ -191,7 +191,7 @@ color:
   # 超链接悬浮时字体色
   # Color of link when hovering
   link_hover_color: "#5298F4"
-  link_hover_color_dark: "#37C5B2E7"
+  link_hover_color_dark: "#71ADFC"
 
   # 超链接悬浮背景色
   # Color of link background when hovering
@@ -242,6 +242,7 @@ custom_js:
 custom_css:
   - /css/macpanel
   - //at.alicdn.com/t/c/font_4276126_g9ka2djyc2p.css
+  - https://static.kevinchu.top/blog/assets/css/waline-custom.css
 
 # 网页访问统计
 # Analysis of website visitors
