--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1066,6 +1066,12 @@ links:
       link: "https://camill.love",
       avatar: "https://www.camill.love/img/myself.jpg"
     }
+    - {
+      title: "张洪Heo",
+      intro: "分享设计与科技生活",
+      link: "https://blog.zhheo.com",
+      avatar: "https://bu.dusays.com/2022/12/28/63ac2812183aa.png"
+    }
     # - {
     #   title: "Fluid Blog",
     #   intro: "主题博客",
