--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1072,6 +1072,12 @@ links:
       link: "https://blog.zhheo.com",
       avatar: "https://bu.dusays.com/2022/12/28/63ac2812183aa.png"
     }
+    - {
+      title: "归途的秘密基地",
+      intro: "科技，无限想象！",
+      link: "https://halo.qq-channel.cn",
+      avatar: "https://halo.qq-channel.cn/upload/retouch_2024022200335413.png"
+    }
     # - {
     #   title: "Fluid Blog",
     #   intro: "主题博客",
