--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1106,7 +1106,7 @@ links:
       title: "viisaus（小欧同学）",
       intro: "静水深流，笃志前行♨️♨️♨️",
       link: "https://viisaus.tech",
-      avatar: "https://viisaus.tech/image/header.png"
+      avatar: "https://www.viisaus.tech/image/header.jpg"
     }
     # - {
     #   title: "Fluid Blog",
