--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,6 @@ jobs:
     - name: 检出仓库代码
       uses: actions/checkout@master
 
-    - name: Set up Python 3.0.1
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.0.1'
-
     - name: 安装Node.js 14.x 
       uses: actions/setup-node@master
       with:
@@ -37,6 +32,8 @@ jobs:
       run: |
         sudo pip install coscmd
         sudo pip install tccli
+        sudo pip install coscmd -U
+        sudo pip install tccli -U
 
     - name: 配置腾讯云依赖
       env:
