--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
     - name: 检出仓库代码
       uses: actions/checkout@master
 
+    - name: Set up Python 3.8.x
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8.x'
+
     - name: 安装Node.js 14.x 
       uses: actions/setup-node@master
       with:
@@ -32,8 +37,6 @@ jobs:
       run: |
         sudo pip install coscmd
         sudo pip install tccli
-        sudo pip install coscmd -U
-        sudo pip install tccli -U
 
     - name: 配置腾讯云依赖
       env:
