--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1091,6 +1091,12 @@ links:
       avatar: "https://i.p-i.vip/47/20240920-66ed7b168c38c.jpg"
     }
     - {
+      title: "青萍叙事",
+      intro: "一个懂技术的产品汪🐶",
+      link: "https://blog.lusyoe.com",
+      avatar: "https://cdn.lusyoe.com/images/avatar.svg"
+    }
+    - {
       title: "【⚠️失联】Camill",
       intro: "Camill的博客",
       link: "https://camill.love",
